--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,64 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
+# Orbs - herramientas reutilizables de CircleCI
+orbs:
+  docker: circleci/docker@2.2.0
+
+# Definición de jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
+  build-and-push:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
+      - image: cimg/base:stable
     steps:
-      # Checkout the code as the first step.
       - checkout
+      
+      # Setup Docker buildx para builds más eficientes
+      - setup_remote_docker:
+          docker_layer_caching: true
+      
+      # Login a Docker Hub
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Docker Login
+          command: |
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      
+      # Generar tag dinámico basado en fecha y commit
+      - run:
+          name: Generate Tag
+          command: |
+            echo "export IMAGE_TAG=$(date +%Y%m%d)-${CIRCLE_SHA1:0:7}" >> $BASH_ENV
+            source $BASH_ENV
+            echo "Building with tag: $IMAGE_TAG"
+      
+      # Build de la imagen Docker
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t markenx/markenx-django:$IMAGE_TAG \
+                         -t markenx/markenx-django:latest .
+      
+      # Push de la imagen a Docker Hub
+      - run:
+          name: Push Docker Image
+          command: |
+            docker push markenx/markenx-django:$IMAGE_TAG
+            docker push markenx/markenx-django:latest
+            echo "Image pushed with tag: $IMAGE_TAG"
+      
+      # Mostrar información de la imagen
+      - run:
+          name: Image Info
+          command: |
+            docker images | grep markenx-django
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
+# Workflows - orquestación de jobs
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  build-and-deploy:
     jobs:
-      - say-hello
+      - build-and-push:
+          context: docker-hub
+          filters:
+            branches:
+              only:
+                - main
